# nexus

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  benchmark_results.json  docker-compose.yml  pyproject.toml
docs/api-docs/: INDEX.md  anthropic-claude.md  biorender-mcp.md  hetionet.md  kegg-rest.md  ncbi-eutils.md  neo4j-python.md  nexus-plan-public.md  paperqa2.md  pubchem.md  semantic-scholar.md  strateos.md  string-db.md  supabase-python.md  tamarind-bio.md
docs/data/: primekg.md
docs/plans/: 2026-03-08-collaboration-setup-design.md  2026-03-08-experiment-wiring-design.md  2026-03-08-experiment-wiring-plan.md  2026-03-08-framework-fixes-design.md  2026-03-08-framework-fixes-plan.md  2026-03-08-graph-reasoning-upgrade-design.md  2026-03-08-graph-reasoning-upgrade-plan.md  2026-03-08-nexus-design.md  2026-03-08-nexus-implementation.md  2026-03-08-research-output-design.md
frontend/: package-lock.json  package.json
learning/: pivot-rules.md
scripts/: benchmark.py  download_hetionet.sh  full_pipeline_test.py  generate_briefs.py  load_primekg.py  run_session.py  seed_hetionet.py  setup.sh  visualize_graph.py
tests/agents/: test_extract.py  test_literature_agent.py  test_reasoning_agent.py  test_search.py  test_viz_agent.py
tests/api/: test_health.py  test_sessions.py  test_wired_routes.py
tests/checkpoint/: test_agent.py
tests/cloudlab/: test_protocol_agent.py  test_strateos.py
tests/db/: test_models.py
tests/graph/: test_abc.py  test_abc_fanout.py  test_client.py  test_resolve.py  test_seed.py
tests/harness/: test_harness.py  (+1 more)
(+118 files in other folders)
