[project]
name = "nexus"
version = "0.1.0"
description = "Autonomous Biological Discovery Platform"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"httpx>=0.27.0",
	"pydantic>=2.0",
	"pydantic-settings>=2.0",
	"neo4j>=5.0",
	"supabase>=2.0",
	"anthropic>=0.40",
	"paper-qa>=5",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.24",
	"pytest-httpx>=0.30",
	"ruff>=0.6",
	"mypy>=1.11",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
